fix bugs in friendpal
